# merlon

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md
.github/workflows/: python.yml  release.yml  rust.yml  test.yml
assets/dmg/: dmgbuild.json
assets/logo/: merlon-macos-app-icon.icns
docs/: api.rst  changelog.md  conf.py  emulators.md  getting_started.md  glossary.md  index.md  index.rst  requirements.txt  star_rod.md
docs/advanced/: build_source.md  python.rst  rust.md
examples/: paper-capio.merlon  skip-intro-logos.merlon
src/: apply.rs  baserom.rs  build.rs  decomp_repo.rs  emulator.rs  gui.rs  lib.rs  main.rs  mod_dir.rs  new.rs  pack.rs  package.rs  package_config.rs  python.rs  rom.rs  run.rs
src/gui/: logotype.rs  support_link.rs
src/package/: distribute.rs  init.rs  manifest.rs  registry.rs
src/package/manifest/: id.rs  name.rs
templates/: CC-BY-SA-4.0.txt  README.md  gitignore
test/: LICENSE  merlon.toml
tests/: cli.rs  cli_tests.rs  dependencies.rs  full.rs  rom.rs  slow.rs
tests/cmd/: help.stdout  help.toml  new.stdout  new.toml
tests/cmd/new.out/test-mod/: LICENSE  README.md  merlon.toml
tests/dependencies/: skip_intro_patch.patch
