[package]
name = "merlon"
version = "0.3.0"
edition = "2021"
authors = ["Alex Bates <alex@nanaian.town>"]
description = "Paper Mario (N64) decomp mod manager"
license = "MPL-2.0"
repository = "https://github.com/nanaian/merlon"

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
heck = "0.4.1"
inquire = "0.6.1"
klask = { version = "1.0.0", optional = true }
serde = { version = "1.0.160", features = ["derive"] }
shellexpand = "3.1.0"
toml = "0.7.3"

[dev-dependencies]
assert_cmd = "2.0.11"

[features]
default = []
gui = ["dep:klask"]

[patch.crates-io]
# https://github.com/MichalGniadek/klask/issues/50
klask = { git = "https://github.com/xosxos/klask.git", rev = "27d4c0b5493423724ffa5793e183f7333089f6eb" }
