[package]
name = "merlon"
version = "1.3.0"
edition = "2021"
authors = ["Alex Bates <alex@nanaian.town>"]
description = "Mod package manager for the Paper Mario (N64) decompilation"
license = "MPL-2.0"
repository = "https://github.com/nanaian/merlon"

[lib]
name = "merlon"
crate-type = ["cdylib", "rlib"] # bin for executable, cdylib for Python, rlib for Rust

[dependencies]
anyhow = { version = "1.0.70", features = ["std"] }
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
egui = { version = "0.21.0", features = ["serde"], optional = true }
eframe = { version = "0.21.0", default-features = true, features = [ "accesskit", "default_fonts", "glow", "persistence", "ron", "dark-light" ], optional = true }
fs_extra = "1.3.0"
heck = "0.4.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
pyo3 = { version = "0.18.3", features = ["abi3-py37", "multiple-pymethods", "anyhow", "serde"] }
scopeguard = "1.1.0"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
sha1 = "0.10.5"
temp-dir = "0.1.11"
thiserror = "1.0.40"
toml = "0.7.3"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
egui-phosphor = "0.1.0"
egui_extras = { version = "0.21.0", features = ["tracing", "image"] }
image = { version = "0.24.6", features = ["png"] }
rfd = "0.11.3"

[dev-dependencies]
rand = "0.8.5"
trycmd = "0.14.16"

[features]
default = []
gui = ["dep:egui", "dep:eframe"]

[package.metadata.bundle]
name = "Merlon"
identifier = "town.nanaian.merlon"
icon = ["assets/logo/merlon.ico", "assets/logo/merlon.png", "assets/logo/merlon-macos-app-icon.icns"]
resources = []
copyright = "Copyright 2023 Alex Bates"
category = "public.app-category.developer-tools"
short_description = "Mod manager for the Paper Mario (N64) decompilation"
long_description = """
Mod package manager for the Paper Mario (N64) decompilation.

Merlon allows you to create mod packages by editing the decomp source code, and to export packages
into distributable `.merlon` patch files that can be applied to a base ROM.

For assistance with Merlon, join the #merlon channel of the Paper Mario Modding Discord server:

https://discord.gg/paper-mario-modding-279322074412089344
https://discord.com/channels/279322074412089344/1099844075399696394
"""
deb_depends = []
osx_frameworks = []
