[package]
name = "merlon"
version = "1.3.1"
edition = "2021"
authors = ["Alex Bates <alex@nanaian.town>"]
description = "Mod package manager for the Paper Mario (N64) decompilation"
license = "MPL-2.0"
repository = "https://github.com/nanaian/merlon"

[lib]
name = "merlon"
crate-type = ["cdylib", "rlib"] # bin for executable, cdylib for Python, rlib for Rust

[dependencies]
anyhow = { version = "1.0.70", features = ["std"] }
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
fs_extra = "1.3.0"
heck = "0.4.1"
klask = { version = "1.0.0", optional = true }
log = "0.4.17"
pretty_env_logger = "0.4.0"
pyo3 = { version = "0.18.3", features = ["abi3-py37", "multiple-pymethods", "anyhow", "serde"] }
scopeguard = "1.1.0"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
sha1 = "0.10.5"
temp-dir = "0.1.11"
thiserror = "1.0.40"
toml = "0.7.3"
uuid = { version = "1.3.1", features = ["v4", "serde"] }

[dev-dependencies]
rand = "0.8.5"
trycmd = "0.14.16"

[features]
default = []
gui = ["dep:klask"]

[patch.crates-io]
# https://github.com/MichalGniadek/klask/issues/50
klask = { git = "https://github.com/xosxos/klask.git", rev = "27d4c0b5493423724ffa5793e183f7333089f6eb" }
